frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  gateways:
  # Match gateway in istio-system e.g. <gateway>.istio-system.svc.cluster.local
  - frontend-gateway.user1-istio-system.svc.cluster.local
  hosts:
  # Match Route URL
  - frontend.apps.cluster-ada4.ada4.example.opentlc.com
  http:
  - route:
    - destination:
        host: frontend
